# oks_utils_old

./: CMakeLists.txt  NOTICE  post_install.sh.in
apps/: oks_diff_data.cpp  oks_diff_schema.cpp  oks_get_data.cpp  oks_get_schema.cpp  oks_ls_data.cpp  oks_merge.cpp  oks_refresh.cpp  oks_report_equal_objects.cpp  oks_report_no_descriptions.cpp  oks_tutorial.cpp
cgi/: cmp_data_versions.sh  getdata.sh  oks-archive.pl  vtable.sh
cmake/: oks_utilsConfig.cmake.in
cmt/: requirements
data/online-help/data-editor/: ClassWindow.html  DataFileWindow.html  GraphicalWindow.html  Index.html  MainWindow.html  MessageLogWindow.html  ObjectCreation.html  ObjectWindow.html  OksDataEditor.html  QueryWindow.html  ReplaceWindow.html
data/xsl/: oksSchema2Web.xsl
doc/: RELEASE_NOTES.tdaq-02-01-00.html  RELEASE_NOTES.tdaq-04-00-00.html
examples/: alloc.cpp  and_expression.cpp  attribute.cpp  class.cpp  comparator.cpp  data.cpp  index.cpp  kernel.cpp  method.cpp  not_expression.cpp  object.cpp  or_expression.cpp  profiler.cpp  query.cpp  r_expression.cpp  relationship.cpp
scripts/: oks-create-new-base-version.sh  oks-fill-remove-archive-patterns.sh  oks-generate-schema-docs.sh  oks-test-duplicated-objects.sh
src/lib/: oks_access.cpp  oks_tz.cpp
src/oks/: xm_context.h  xm_dialog.h  xm_help_window.h  xm_msg_window.h  xm_popup.h  xm_utils.h
src/rlib/: clean-OksArchive.sql  create_db.mysql.sql  create_db.oracle.sql  create_db.sqlite.sql  grant.sql  oks_ral.cpp  test-roks.sh  update-OksArchive.sql
src/rlib/data4test/: d1.data.xml  d21.data.xml  d3.data.xml  d5.data.xml  s1.schema.xml  s2.schema.xml
src/xm-gui/: add_class.xpm  aggregation.xpm  comment.xpm  commit.xpm  data_editor.cpp  data_editor.h  data_editor_about.xpm  data_editor_class_dlg.cpp  data_editor_class_dlg.h  data_editor_comment_dlg.cpp  data_editor_comment_dlg.h  data_editor_data_dlg.cpp  data_editor_data_dlg.h  data_editor_dialog.h  data_editor_exceptions.h  data_editor_files_dlg.cpp  data_editor_files_dlg.h  data_editor_main_dlg.cpp  data_editor_main_dlg.h  data_editor_main_dlg_classes.cpp  data_editor_main_dlg_objects.cpp  data_editor_merge_conflicts_dlg.cpp  data_editor_merge_conflicts_dlg.h  data_editor_object_dlg.cpp  data_editor_object_dlg.h  data_editor_object_ref_by_dlg.cpp  data_editor_object_ref_by_dlg.h  data_editor_oks_object.xpm  data_editor_query_dlg.cpp  data_editor_query_dlg.h  data_editor_replace_dlg.cpp  data_editor_replace_dlg.h  data_editor_repository_versions_dlg.cpp  data_editor_repository_versions_dlg.h  data_editor_search_panel.cpp  data_editor_search_panel.h  data_editor_search_result_dlg.cpp  data_editor_search_result_dlg.h  data_editor_versions_query_dlg.cpp  data_editor_versions_query_dlg.h  (+77 more)
src/xm-lib/: default-parameters.schema.xml  oks_xm_context.cpp  oks_xm_context_params.cpp  oks_xm_context_params.h  oks_xm_context_print.cpp  oks_xm_context_print.h  oks_xm_context_ps.cpp  oks_xm_dialog.cpp  oks_xm_help_window.cpp  oks_xm_msg_window.cpp  oks_xm_popup.cpp  oks_xm_utils.cpp
tests/: DAQ-Configuration.schema.xml  do-tests  generate_data.cpp  make-sciplot-data  test.sh  test_indexies.cpp  time_tests.cpp
